crates/tachy/src/components/snapshots/tachy__components__palette__tests__snapshot_argument_mode_with_preview.snap
---
source: crates/tachy/src/components/palette.rs
expression: "render(&mut p, &state).backend()"
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"       ┌──────────────────────────────────────────────────────────────────────────────────────────────┐       "
"       │ › sort price:desc,                                                                           │       "
"       │ name   str                                                                                   │       "
"       │ price  str                                                                                   │       "
"       │ qty    str                                                                                   │       "
"       │ city   str                                                                                   │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │ expected a column                                                                            │       "
"       └──────────────────────────────────────────────────────────────────────────────────────────────┘       "
"                                                                                                              "
