crates/tachy/src/components/snapshots/tachy__components__palette__tests__snapshot_empty_input.snap
---
source: crates/tachy/src/components/palette.rs
expression: "render(&mut p, &state).backend()"
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"       ┌──────────────────────────────────────────────────────────────────────────────────────────────┐       "
"       │ ›                                                                                            │       "
"       │ delete view     delete a saved view                                                          │       "
"       │ filter          filter the view                                                            f │       "
"       │ freeze          freeze the first N columns                                                   │       "
"       │ goto            go to a row, a percentage or a column                                      g │       "
"       │ open            open a file in a new tab                                              ctrl-o │       "
"       │ profile         full-column statistics                                                       │       "
"       │ set hints       show or hide the key-hint line                                               │       "
"       │ set inspector   show or hide the inspector                                                   │       "
"       │ set type        override a column's type                                                     │       "
"       │ sort            sort the view by one or more columns                                         │       "
"       │ autofit_col     auto-fit the current column                                                = │       "
"       │ close_tab       close the current tab                                                 ctrl-w │       "
"       │ columns         show, hide and reorder columns                                             c │       "
"       │ copy_cell       copy the cell                                                              y │       "
"       │ copy_row        copy the row                                                               Y │       "
"       │ dismiss         dismiss a message                                                        Esc │       "
"       │ usage: delete view <name>                                                                    │       "
"       └──────────────────────────────────────────────────────────────────────────────────────────────┘       "
"                                                                                                              "
