crates/tachy/src/components/snapshots/tachy__components__palette__tests__snapshot_error.snap
---
source: crates/tachy/src/components/palette.rs
expression: t.backend()
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"       ┌──────────────────────────────────────────────────────────────────────────────────────────────┐       "
"       │ › sort nope                                                                                  │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │ unknown column "nope" — did you mean "name"?                                                 │       "
"       └──────────────────────────────────────────────────────────────────────────────────────────────┘       "
"                                                                                                              "
