crates/tachy/src/components/snapshots/tachy__components__palette__tests__snapshot_fuzzy_results.snap
---
source: crates/tachy/src/components/palette.rs
expression: "render(&mut p, &state).backend()"
---
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"       ┌──────────────────────────────────────────────────────────────────────────────────────────────┐       "
"       │ › srt                                                                                        │       "
"       │ sort         sort the view by one or more columns                                            │       "
"       │ sort_asc     sort by the current column, ascending                                         s │       "
"       │ sort_desc    sort by the current column, descending                                        S │       "
"       │ search_next  next search match                                                             n │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │                                                                                              │       "
"       │ usage: sort <col>[:asc|:desc][:ci], …                                                        │       "
"       └──────────────────────────────────────────────────────────────────────────────────────────────┘       "
"                                                                                                              "
